<resources>
    <string name="app_name">Java auth with JWT</string>
    <string name="hint_username">Username:</string>
    <string name="hint_password">Password:</string>
    <string name="button_login">Login</string>
    <string name="error_missing_username">Username is missing</string>
    <string name="error_missing_password">Password is missing</string>
    <string name="error_invalid_credentials">Provided credentials are wrong</string>
    <string name="error_login">Error while trying to login, try again</string>
    <string name="success_login">Login successful</string>
    <string name="title_activity_user_list">UserListActivity</string>
</resources>
